# af2b313c-6390-11ea-a318-3ebbe36c57e4

./: CMakeLists.txt  CodeStyleAndStandards.md  Direction.cpp  Direction.hpp  Directions.cpp  Directions.hpp  FileReader.cpp  FileReader.hpp  NaiveSolver.cpp  NaiveSolver.hpp  NaiveWordSearchSolver.cpp  NaiveWordSearchSolver.hpp  Point.cpp  Point.hpp  README.md  SinglePassSolver.cpp  SinglePassSolver.hpp  WordGrid.cpp  WordGrid.hpp  WordSearchSolver.cpp  WordSearchSolver.hpp  WordSolution.cpp  WordSolution.hpp  build_ubuntu.sh  main.cpp  main.hpp  run_tests.sh
src/: Direction.cpp  FileReader.cpp  NaiveSolver.cpp  SinglePassSolver.cpp  SinglePassSolver.hpp  WordGrid.cpp  WordGrid.hpp  WordSearchSolver.cpp  WordSearchSolver.hpp  WordSolution.cpp  WordSolution.hpp  main.cpp
tests/: CMakeLists.txt  FileReadingTests.cpp  TestAltMain.cpp  TestConstants.cpp  TestConstants.hpp  TestDirections.cpp  TestNaiveSolver.cpp  TestPoint.cpp  TestSinglePassSolver.cpp  TestSinglePassWordSearchSolver.cpp  TestWordGrid.cpp  TestWordSearchSolver.cpp  TestWordSolution.cpp
tests/data/: LorumIpsum.txt  NextGen.txt  ProvidedWordSearch.txt  WordSearchInvalidSearchWordsDosCommas.txt  WordSearchInvalidSearchWordsLength.txt  WordSearchMultipleCharactersBetweenDelimiters.txt  WordSearchMultipleDelimitersBetweenCharacters.txt  WordSearchWrongCharacters.txt  WordSearchWrongNumberOfColumns.txt  WordSearchWrongNumberOfRows.txt
